Remove bin_Linux and replace lin_Linux by lib

--- a/README
+++ b/README
@@ -8,8 +8,7 @@ include $(HOME)/Makefiles/common.mk
 include $(TEMPLATES)/ada.mk # or c.mk
 -------------------------------------
 
-The generation will make two directories, lib_Linux (for the objects) and 
-bin_Linux (for the binaries) and create symlinks from bin_Linux/* to .
+The generation will make a directory 'lib' for the objects and librarires.
 
 List of templates:
 common.mk : defines path to Makefiles and defines UNIX commands
